@@ -11,8 +11,13 @@
 [% END -%]
          <p class="navbar-text pull-right">[% loc( 'Generated by' ) %]
 [%    text = config.appclass -%]
-[%    tip  = loc( 'Help pages for the application' ) -%]
-[%    LinkWithTips( links.help_url, 'windows', text, page.hint, tip ) -%]
+[% IF page.mode != 'static' -%]
+[%    tip  = loc( 'Help pages for the application' ); uri = links.help_url -%]
+[% ELSE -%]
+[%    tip  = loc( 'Site Description' ); uri = '/' -%]
+[% END -%]
+
+[%    LinkWithTips( uri, 'windows', text, page.hint, tip ) -%]
             &nbsp;v[% page.application_version %]
          </p>
       </div>
