@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Added Role::Component. Doh.pm contains only VERSION number
           - Streamlined the controller code
           - Server throws better exceptions
           - Patched bug in warnings::illegalproto for Perl < 5.012
